--- a/styles.css
+++ b/styles.css
@@ -606,7 +606,7 @@ footer {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
 }
 
 /* Optimize section backgrounds for mobile */
